# Deep-Research-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/agents/: research.py  subagents.py
src/api/: app.py
src/config/: __init__.py  agent_configs.py  llm_models.py  prompts.py  settings.py
src/models/: response_model.py
src/observability/: langfuse_config.py  logging.py
src/tools/: ddg_mcp.py  google_search_tool.py  web_scrape_tool.py
